Modificaciones a las ventanas principales de Secretaria, gerente de exhibiciones, director, encargado de bodega y administrador listas.

--- a/MuseoArkham/Vista/Vistas Gerente/VistaGerente.resx
+++ b/MuseoArkham/Vista/Vistas Gerente/VistaGerente.resx
@@ -117,6 +117,99 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="flowLayoutPanel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAZAAAABaCAYAAACWuwCqAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAALiMAAC4jAXilP3YAAAAHdElNRQfiBQ4BOziqFdX7AAAUIklEQVR4Xu2dC9gmZVnH
+        URfFAi6jPOCpLDITPKRiAomQbnIITUJTEAtQMw6GeaBL0CRQQUNMuYREQsnUlhIT21zZE1+7i8EKS64R
+        yEGKg3iKBUG2Bbbff7xnmMMz78z7vt+377ff9/9d1/9657mfwzzzzsx9z+GZmW2MMcYYY4wxxhhjjDHG
+        GGOMMcYYY4wxxhhjjDHGGGOMMcYYYybOypUrT0c/F0ljjDGmGwLHTugn6P1hMsYYY7ohcJyCNqMfoh3D
+        bIwxxrRDwNgefS8CiHR8ZBljjDHtEDCOKQUP6Xa0ILKNMcaYNASL60vBI9dRkW2MMcY0IVC8phY4cl0X
+        RYwxxpgmBIoraoGjrEOimDHGGPMQBIg9awGjrsujqDHGGPMQBIjFtYCR0r5R3BhjjMmCxzNrgaJNy6OK
+        McYYkwWQ82qBYpCeHdWMMcbMZwgIj0MbSwGiS4uiqjHGmPkMAeHUWoDo0oPoGVHdGGPMfIRAsCMqv7ak
+        r86NJowxxsxHCATH1gJDXz2Ado5mjDHGzDcIAjeWgsKwOiOaMcYYM58gABxaCwjD6sfIH5wyxpj5Bs7/
+        8lIwGFUnRXPGGGPmAzj+vWuBYFTdgXaIZo0xxsx1cPpfLQWBcXVMNGuMMWYug8PftRYAxtVNaNto3hhj
+        zFwFZ39+yflPlw6L5o0xxsxFcPR6bcmmkuOfLq2PWRhjjJmL4Og/VHP806kDYzbGGGPmEjh4vbbkrpLD
+        n25dFrMyxhgzl8DBv7Xm8Lu0CmmYbiqvTXvF7IwxxswFcOzbottKjr6PDkIn1mxd+krM0hhjzFwAx/6G
+        mqPv0tVRbye0oWTvo9/IZmqMMWbrB6d+dc3Jd+lNUVV1z6zldelzUdUYY8zWDA59Yc3Bd+l2tCCqq/7j
+        0bBDf3eJ6sYYY7ZWcOZfqzn3Lr0zqhZgO6dWpktnR1VjjDFbIzjy3WuOvUv/i34+qhdgezq6P8r0kb6x
+        /riobowxZmsDJ/7pklPvozOjagPyLqyV7dJpUdUYY8zWBA78qejBkkPvo6dE9QbkDXs2czfaMaobY4zZ
+        WsB5f6TkzPvo/KjaCmWW1+p06V1R1RhjzNYAjnuU5zeeF9Vbocxv1ep0SU+ybxfVjTHGzHZw2ieUnHgf
+        XRJVO6Hs12t1u/THUdUYY8xsBoe9AH235MD76KVRvRPKHlyr26Vr0cOjujHGmNkKzvpNJefdR+uiam+o
+        c02tjS4dGlWNMcbMVnDW/1lz3l16fVTtDXWOqrXRpbVR1RhjzEyAo/2bMbUIpRz4IH0SpdoaJNVJtTVI
+        6luqrd6Kv8kYY0wdnGTK8Vqh+JuMMcbUKTnLtehzVqZvIwcQY4wZRO4o0bFhmvfwX+jylQOIMcYMIneU
+        qDWAkPcF9IhIVsD+50jPaUj/ik5HT4ts5e8becVHn5h+Crok7IeE7d1oKitQA7vOjpJPmGM/FD09kknI
+        f3NMNiDv8JgswOYAYowxXeSOEiUDCPYDIv/IMFXALmd7OXozOh6tQLegx0b+7yPV/+1I74a+g/TOrLfI
+        JphWO3dHsgJ21f94JAuwPQxdhz4TpiTkqz+viGQBtteh9ZEswOYAYowxXeSOErUFkG8gPSR4PXpYmAuw
+        ydl+PpJKPwLJYR8R6SKAoH3Qj9E96ICsQkB6lAByBLo38n8tzBWw7xn5/x6mDNIPR/nw418NcwZpBxBj
+        jOkid5SoEUCwvRI9gH4T3YcaZyHY+gYQveb9J+h/0O5Z4RLY1I4Cy/MTUv1KACGtp98V1M5Al6HPRlYF
+        7O9HdyK1sX+YZT8kbHehE8KcQdoBxBhjusgdJUoFEJ19ZN8b5/dsJIf9yCwzIC1nm1/CkpYgBZBfiPw8
+        gEg6+3hqVrEG9sJpt6geQI5EOvt4EnoFUpnnRnYBtv9AGlm1Cv1bmGW/Cn0JfQWtDHMGSQcQY4zpIneU
+        qBJASOvsQ/ZdI70L0n2LylkIaTnbHyKdPaj8R1HxjQ+m8wCyPn7PiqwK2NWOznLyQFSW6hUBhOlt0Q3o
+        E2GS7Wr0pUhmkP5lpLqvQS+L6b3Rq2J6L/SWmH5SVMv7IltnAJmamtqZch9CWj4FNOm/0UUrVqzYLYqZ
+        IeG/O5X/8PpIzhjMZ/tLL730GOalzzDrUu3/oR8hvTpHD6IeTplZ/XZn+vcY+nkHv8eHaSLM5Dqj3XWs
+        p6WRNLMFVkzmKFE9gOgIPc8rS467eFEh03K2n0e/i5Rf+cIg6TyAyIF/JqYLx5+DTe30ugfC9BvDpjMi
+        jdCSvhe24hXxTGtkl2yPifQVaApp9NeKsD0ZqUzxBl+mewWQ5cuXKwDpk7z6kNXfsoGfgP6C6fPR99mh
+        XhtF1ear0Qbq9H6J5HxmJp1RDuvi5cxD280mpO/O6HLn25C2m3NRdo+MvjTObLcEzLvXNkOZT6AVmzdv
+        btyj3JI4gMwO+K+2nK9hRpmjREUAYTq/P6C34JbvRfwO0hHaMVFUZbMAEtMfQKr3qiwTmC5uokf6nEif
+        mxUISPcKIPw+Gt2GdPlJQ3jL0lFjcRbCtC5bXRpJpfPlkl4WZtm/hRZHUunOALJ27dqfIf92dM3q1asb
+        32Jfv379I9esWbNTJOWsdEZ3K3pxmMwAZjqA0PbR6AE5Jea1S5gbkLfb0qVLG9/s3xL02Wbo3wvIv5Pf
+        XwrTxJjJdUa7DiA92aK+hpnkDrUcQOSIvxzJCtj/HslxPirS5QCikU2LkY7Knxy2SgARTOtIT7ZPoexs
+        ht++AeQ4dD/6lSyzBLbXI5VVsHtsTJ8U2RmkNez3ykhmkP4gUmD82Uh3BhB2lt9TPhv1wWGaMZjPe1Hj
+        rG0uM5POaGpq6oW0rbOOC5nPgjBPjFHXL2cc2t+uYBs8KkwTxQGkH6Ou71kJC5I5SpQFEH414urLKPm1
+        QOy7Rv5LIi2n/cYsE5jW9diPozdE+nlIDrkyzJa0jgBlz9vp9SAhv/+CTssyamDXcyHLkAKUnl9RvedE
+        dgbpP0LZw4s5pLXMKpufJfUJIGpHlzf2C9OMwY7zVebzhUjOC2bYGX0T3cw8tg/TRJkr63eG19mcCSBz
+        an9mxVQCyFyH5dQN+IEfmyK/M4DEUawCyKfCNGM4gEwfnN7rYEHrbdZs7w4g3dCuA8hsRDtTSPcVNJLI
+        +ukonIEBRLAhaAiwLmN9eO3atduGOQkbTPZtd34r19upqwcsNfT5+0jDnNeh7B4SZT/LdL5+CmF/X1Y5
+        wCkeiF1vANDNfOkSyrwosjPK8+dXD2Dqvo+ey9Hyvk5ltAz0R4MAbkIb0TWk/zBroAZ5u6PzkAYyqKz+
+        s0WUL0bg9YHyGoKtvut5nLtJ87PyxfSz1Rn1Wd42KPdXlN+8atWqJ4ZpJPr2geUZef3ym9xmBDY9lHsR
+        ugPp8quueV+A/RlRpKDcDr/70yfdG1Rf9HzUomXLlhUjEPuwpdeZoHwjgAyzXKT/Dt0QyQa0cRb5N5YH
+        IoywXw3sA2U692fSvfar8nzJ07eStM/eS5+fX86L4gXYem83vaByY4GshxR/UxKc0A6U+ecoey0roXJp
+        rExqpTKtkWub+D2NjWBvVr5GBZ3M9InK5/dp5Okm6Rq0RNNS2fmRPok8Da/WSBztxGpTG8h9tLdXFCvP
+        /yzaZXLlQn41KEL3tB5kWk7hn5B2mIWU06i5C9Bm2nllNFOAXRueRp4dTL6O6vVaGG30V+nafBQbCGXf
+        g3Qj+2zaeCnT+zLf9/GrnU/vSms4I/J7LW8blNNw3dsjORJ9+xD2kdcv00lHgE2Xex/E/mna0KVaOR2N
+        vNFIsnuw7xNFM0rtqN96jdDhaA/qaviy7leuJ6/XvSDKbvF1Jig7KIB0LhfTeieftuXG/DTghTw9ivDu
+        MPXu8zB9wNa5P2PvtV9RL5sv5d6uPH41iOjVMY9p2W56QcXyKKuU9ABhw7F26GSUamsmpaOfVF8GScuW
+        aqtQ/E0D4Y9/LWVvRmrzsqmpqcb9o9RKJb2CFVl5diUFZZKnvNqQaUMbRGP8P3a92PIbkSzmj65kuuIs
+        sCmi6EhnTSJPw7m/FskCjqx+MSYL6I/+My1jMcKtDZZJr5hR34v7ZznY90AaKFFxRsMsbxuU0VDuxvvP
+        csj7L1TeRrQ8xT23YfrA9FjrF1tjm2H+L5ENvS1MBXIwtKWz4lsXL16cDXIReTvo5vLIQIHtoMg7KEyt
+        TGqdCcq1BhDUuVw6s2D6BuqckxUogU2jMxXon6D0MH0epg85betb9N2vSvNdx3T2mEJOnsfvWNvN2NDg
+        o5CiqmbcVzpV3yGa2GJonkgRP9WnNmnZpmXsPCtrO1bCibSnU12N8HlrZGWkVippbYyrI9lK2wZHXT3o
+        dl3qiJ8NRke7OkLJ3oxcmn/jc8KU+VPloYYTIU+XtO6IZCeU1en70ZFshTJ6duiqSDZgvtqgK86IdO/l
+        bYMyCpY3RrIB9Q/jPzo2pJeD6j8rAgjp3n1geqz1iy21zXwRrV+0aFHy7dgcvDxTdWizGB1Yaqd4eWlO
+        ONYN6OQwtUKZiawzQblBZyC9lotpnT39SGccYcqIfn8xkkP1eZT/lrqtAaQN2qjsV/l80XvDVFDq01jb
+        zdjQoE6Lyg63jzo3xJlC8671pY+y6//ThTYspAcVK223rNSFSNchL06dteS0bXDU+y725JP91NEr87VB
+        ZG8hzudPunitfg552fMxqhOmAuwaLXdvJCtQT6fj70S61KXT8uxhTtrJLtEMgnK3UO6DkWxA26dRpu6M
+        ei9vG5TRa2029jnSYl7bqU31JUxD9YHpsdYvttQ2o6flPxDJJOTfRZvFf5u3g/NLnlGTp/thH4tkK5SZ
+        yDoTlGsNIH2XK+any2/l4PoEbDr7KEZTkh56vxrmv6XuwABCXud+lc8X7RumgjyP37G2m7GhQb0epOxs
+        u6Sbatlr3CeB5h19SPWtTeui+rShU1na1Qq7LkzJlSpwLC9kpS2Nvugp+cYG0bbBUVZnOvXlqYi62XDq
+        tvkLbNkzLfxWToUFNr3q5b5IZqic+oRdr6+5mLQuHx6BTa+J0c5XefYmBeXkWBun0znRZt0Z9V7eNijz
+        J1F2YZhaoQ+pADJUH8ZZv9hSjkDOrnFppQxlrkXFcwapdsow/7XkJR1mGdqYyDoTlBt4Ez1MFVLLpf+a
+        OhdFUm28g/RN5bMN0tOyX4m2PmBLre/e+xXT+XwHDpoIU7ZMpIfabsaChnT0lPzzBqhzI5xp1Idan/po
+        2h/5p81/UNv56KzUSi3DRvIs9I+U0Q3tyoNh2qiolwogP8B+DspuxqWUP0XNdOv8sQ0VQEh/El1P248P
+        UwH2DdTpE0A2sFwfjmQD2tB6rDuj3svbhvpMOxp9Vrx5oA3aSwWQkfowyvrFlnIEmv+pkUxCmbvLZVLt
+        lGH+fQPIRNaZoJ3pCiB6L97G/H4F09/EVjljHqbPTI/Sh7b9ufd+NWi+qTzSQ283Y0FjeiAv5WzbpKOT
+        J0b1iUEfdIqpvqT62KbGTeJxoU2NSLkrkp0bWg5ldP21co1+wAaneSyK5EAGzR/bsAFE944ap8NqO9rp
+        E0BWo+SDo4I8veG57ox6L+8gaEOfANBRZPH+sxQsRyqAjNUH1UW91i+2lCPQmx6uTl2fF5zxPFt1UPHp
+        glQ7ZVJOLgVtTHKdTUsA0aVL6mjE1dHk6VLRJv6znSM7A9u07Fci1Ye29U07vfcrpgftz9Oy3YwMjTwn
+        GhtGlXdbTRL6kg0/HVKVJ9a7YOXsx4bwrEhWoC0NGVQQK76UmFqpS5YsyV6dUoYyerPvbZHMoI4+Kbws
+        kgXM/zDs95OfHE9fbj81/xxswwYQnepeEMkM3TCkPzrCVjt9AojurciJVz4sJmK5NISy4oyGWd5BhBOR
+        s9M8/pKj0UdHVgV2quzGIvMrAsgwfRh3/WJPOYL9ZUPHhakghqNqmPK15ZulqXbKsEx9A8jE1hltTEsA
+        EdT5GNJgio+g4nJWzjB9HqUPpJPrG1vv/WrQfFN5pIfebkaGhrSAZefaJX106tej+sRRX0p966vGEcEg
+        WDn6Frx2plVM61rlcUxrxJJe86L/41vllyy2rNTV1DkFmx7u0dhxjYa6h9+3R5GMsG/i90i1w++esmvj
+        wq6x6bokc/ry5csPjGvuf0BaD04VR1Gp+edgGzaAaDSLLsWcwjz34vcApOv86sut1OkMIJRZQB2Kr9zI
+        r/63PbDtg3QZREOi9TbcijMaZnm70DM81Mt2TKSRg3qY6iT0DuxnRt/kEHVaX7xVeZg+MD3W+tU09sY6
+        w6YgpL6dR95+/O5OHV2auRL9gOnKQIm2dnIo3yuAUGZi64xy0xZAsD2XejrA+zZqHHFP134lUn3Allzf
+        2HrvV4Pm25aHbajtZiRoSKdLGs9dd7CDdGFUnzXQJ72tN9XXNmmZkx+7SqHgwB9+IqJa5oBUX8OINWri
+        z+pHtamVSl1960QrTzf+7yT9ddS4oagjZurpxZM69dbzGodHltrVlxn1CnINeND3VPQ9Ej1dfgZtFaOq
+        UvPPwTZUANFRCrZ3IR0xaSfTK/7fo/s9/N5Cnc4AIvQf0cdTor6eutUon7P139JG44aswN5reftCPT0k
+        pv9WL9nUUEm1qa9mXoyOzq+Vl+nbB6bHWr/YWtcZdj1joKNGbXP6726k3Fmpp8oHtSPoU68AIia1zig7
+        bQFEUE8fy/sOwSJ5Sadvn0fpQ9v6Hma/GjTfQXnYe283I0GDevIy5WAH6QVRfdZAn15U62Mf/XVUN8YY
+        Mww4UA0/zb8s2FeVo4LZBH0bdiCAlr1xFG6MMaYDnOcoD+LN2i/sqW+1vvbRxB6ENMYYY4wxxhhjjDHG
+        GGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhjjDHGGGOMmXNss83/A4rJ7lj5TdRVAAAAAElFTkSuQmCC
+</value>
+  </data>
   <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -129,7 +222,6 @@
   <metadata name="Column4.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAYAAAAAAAEAIAAXGQAAZgAAAICAAAABACAAKAgBAH0ZAABAQAAAAQAgAChCAAClIQEAMDAAAAEA
